--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-rating": "^2.0.5",
     "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.11.2",
-    "react-tabs": "^6.0.1"
+    "react-tabs": "^6.0.1",
+    "sweetalert2": "^11.7.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
